# backtest-compilation

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  credentials.json  crontab  crosslisted.txt  error.txt  gdrive.py  gsheet.py  invalid.txt  main.py  mongo.py  process_data.py  pyproject.toml  rename.txt  requirements.txt  run.sh  scheduler.py  settings.py  structure.pkl  token.json  unlikely_exceptions.txt
.github/: dependabot.yml
.github/workflows/: docker_deploy.yml  docker_test.yml  pytest.yml  ruff.yml
tests/: conftest.py  helpers.py  test_gdrive.py  test_gsheet.py  test_main.py  test_mongo.py  test_process_data.py  test_scheduler.py  test_settings.py
