[project]
name = "backtest-compilation"
version = "1.0.0"
description = "Compile backtest data from google drive and update mongodb collections to reflect the new data"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-api-python-client>=2.159.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",
    "gspread>=6.1.4",
    "motor>=3.6.1",
    "python-dotenv>=1.0.1",
    "sentry-sdk>=2.20.0",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
fixable = ["I"]
