[project]
name = "backtest-compilation"
version = "1.0.0"
description = "Compile backtest data from google drive and update mongodb collections to reflect the new data"
readme = "README.md"
requires-python = "~=3.14.0"
dependencies = [
    "google-api-python-client>=2.198.0",
    "google-auth-httplib2>=0.4.0",
    "httplib2>=0.32.0",
    "google-auth-oauthlib>=1.4.0",
    "gspread>=6.1.4",
    "pymongo>=4.17.0",
    "python-dotenv>=1.0.1",
    "sentry-sdk>=2.64.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.ruff]
line-length = 88
fix = true

[tool.ruff.lint]
select = ["I", "F", "E"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

